Do not disable internal keyboard and mouse in docked mode...

...even when the device is in tablet mode position.

Bug: 903526
Change-Id: Ibc6e2cfe547a431ef546ade1b5842d89001a6980
Reviewed-on: https://chromium-review.googlesource.com/c/1422443
Commit-Queue: Xiaoqian Dai <xdai@chromium.org>
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Cr-Commit-Position: refs/heads/master@{#625245}
Former-commit-id: 7db2e8fe08debb408d729d1e2af4ce7033656b7d